# VkEngineDemo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt
engine/precompile/: precompile.cmake
engine/shaders/: basic_P2T2.vert  brdf_lut_gen.frag  compile.bat  cubemap.vert  cubemap_prefilter_gen.frag  irradiance_convolution.frag  shader.frag  shader.vert  shadowmap.vert  skybox.frag  skybox.vert
engine/shaders/include/: brdf.h  constants.h  glsl_utils.h  sampling.h  structures.h  tone_mapping.h
engine/shaders/math/: quat.h
engine/source/: CMakeLists.txt
engine/source/UI/: window_system.cpp  window_system.h
engine/source/editor/: Engine.cpp  Engine.h  InputHandler.h  Renderer.cpp  Renderer.h  UserInput.cpp  VkEngineDemo.cpp  Window.cpp  Window.h  common_utils.cpp  common_utils.h
engine/source/parser/: CMakeLists.txt
engine/source/parser/parser/: main.cpp
engine/source/parser/parser/language_types/: class.cpp  field.cpp
engine/source/parser/parser/meta/: meta_info.h
engine/source/parser/parser/parser/: parser.cpp
engine/source/render/base/: common_vao_defines.h  guid_allocator.h  render_pass.cpp  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_pass_runner.cpp  render_pass_runner.h  render_pipeline_base.h  render_resources.cpp  render_resources.h  render_system.cpp  render_system.h  render_type.h
engine/source/render/light/: light.h
engine/source/render/passes/: main_pass.cpp  main_pass.h  shadowmap_pass.cpp  shadowmap_pass.h  skybox_pass.cpp  skybox_pass.h  ui_pass.cpp  ui_pass.h
engine/source/render/precompute/: brdf_lut.cpp  brdf_lut.h  cubemap_prefilter.cpp  cubemap_prefilter.h  irradiance_convolution_pass.cpp  irradiance_convolution_pass.h
engine/source/resource/asset_manager/: asset_manager.cpp  asset_manager.h
engine/source/resource/components/: component.h  mesh.h
engine/source/resource/data/: basic_shape.h  camera_config.h  material.h  mesh_data.h
engine/source/runtime/core/base/: base_utility.h  exception.h  hash.h  index_range.h
engine/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  matrix3.cpp  matrix4.cpp  matrix4.h  quaternion.cpp  vector2.cpp  vector3.cpp  vector3.h  vector4.h
engine/source/runtime/core/meta/reflection/: reflection.h
engine/source/runtime/core/meta/serializer/: serializer.cpp  serializer.h
engine/source/runtime/framework/config_manager/: config_manager.cpp  config_manager.h
engine/source/runtime/framework/global/: global_context.cpp  global_context.h
engine/source/tiny_engine/: CMakeLists.txt
engine/source/tiny_engine/core/meta/reflection/: reflection.h  reflection_register.cpp  reflection_register.h
engine/source/tiny_engine/core/meta/serializer/: serializer.cpp  serializer.h
engine/source/tiny_engine/include/: Buffer.h  Engine.h  Image.h  Mesh.h  Pipeline.h  RenderResources.h  Renderer.h  Sampler.h  SimpleCamera.h  Texture.h  UserInput.h  VkContext.h  VkUtil.h  Window.h
engine/source/tiny_engine/render/base/: render_pass.h  render_system.h  render_type.h
engine/source/tiny_engine/resource/components/: mesh.h
engine/source/tiny_engine/resource/data/: basic_shape.h
engine/source/tiny_engine/resource/world_hierarchy/: level.h  object.h  world.h
engine/source/tiny_engine/runtime/core/math/: math.cpp  math.h  math_headers.h  matrix3.h  quaternion.h  random.h  transform.h  vector2.h  vector4.cpp
engine/source/tiny_engine/runtime/core/meta/reflection/: reflection.cpp  reflection_register.cpp
engine/source/tiny_engine/source/: Buffer.cpp  Descriptor.cpp  Image.cpp  Mesh.cpp  Pipeline.cpp  Renderer.cpp  Sampler.cpp  Texture.cpp  VkContext.cpp  VkEngineDemo.cpp  VkUtil.cpp
engine/source/vulkan/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandBuffers.cpp  CommandBuffers.h  Constants.h  Descriptor.cpp  Descriptor.h  DescriptorPool.cpp  DescriptorPool.h  Framebuffer.cpp  Framebuffer.h  GPUSampler.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderResources.cpp  RenderResources.h  ResourceTracker.cpp  ResourceTracker.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  ShaderResource.h  StateManager.h  SwapChain.cpp  SwapChain.h  SyncResources.cpp  SyncResources.h  Texture.cpp  Texture.h  TimelineSemaphore.cpp  TimelineSemaphore.h  Uniform.cpp  Uniform.h  (+6 more)
engine/template/: allReflectionFile.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
shaders/: compile.bat
src/: Buffer.h  CMakeLists.txt  Camera.h  Descriptor.cpp  Descriptor.h  Engine.cpp  Image.cpp  Image.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderCfg.h  RenderResources.cpp  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  SyncResources.cpp  SyncResources.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  VkContext.cpp  VkContext.h  VkEngineDemo.cpp  VkUtil.cpp  VkUtil.h  Window.cpp  Window.h  main.cpp
