cmake_minimum_required(VERSION 3.12)
project(VkEngineDemo)
set(CMAKE_CXX_STANDARD 20)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY $<1:${PROJECT_SOURCE_DIR}/bin/$<CONFIG>>)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${PROJECT_SOURCE_DIR}/bin/$<CONFIG>>)

set(TINY_ENGINE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/engine/source")
set(TINY_ENGINE_VENDOR_DIR "${CMAKE_CURRENT_SOURCE_DIR}/engine/vendor")

add_subdirectory(engine)
